[gd_scene load_steps=22 format=3 uid="uid://1ujerm2bmv77"]

[ext_resource type="Script" uid="uid://bnr82y6yordsx" path="res://Encounters/Forgeweaver/forgewaver_encounter.gd" id="1_77d7t"]
[ext_resource type="Texture2D" uid="uid://vepgbih05j16" path="res://Encounters/Forgeweaver/arena.jpg" id="1_yxmbn"]
[ext_resource type="PackedScene" uid="uid://fmnht1kdm7r3" path="res://Encounters/Forgeweaver/Pylon/Pylon.tscn" id="2_csgoa"]
[ext_resource type="PackedScene" uid="uid://du1bovt7sfhte" path="res://Encounters/Forgeweaver/Boss/Forgeweaver.tscn" id="3_6ujcr"]
[ext_resource type="PackedScene" uid="uid://dcaci83fcr8pl" path="res://Player/Player.tscn" id="5_4be0d"]
[ext_resource type="PackedScene" uid="uid://cb0rat5dkdrk3" path="res://Components/raid_alert.tscn" id="6_0biid"]
[ext_resource type="PackedScene" uid="uid://c7p3j0l50lrf0" path="res://Components/PlayerLives.tscn" id="7_84ikf"]
[ext_resource type="AudioStream" uid="uid://20u3xq1as700" path="res://Encounters/Forgeweaver/Sounds/music.mp3" id="7_pjhgh"]
[ext_resource type="AudioStream" uid="uid://egbm35pjtr38" path="res://Encounters/Forgeweaver/Sounds/start_01.ogg" id="8_byhln"]
[ext_resource type="PackedScene" uid="uid://bibth0cg0ljb2" path="res://Components/ReadyCheck.tscn" id="8_gap7l"]
[ext_resource type="AudioStream" uid="uid://dp47esiq71vbm" path="res://Encounters/Forgeweaver/Sounds/start_02.ogg" id="9_41chg"]
[ext_resource type="AudioStream" uid="uid://deijes4w1tbkd" path="res://Encounters/Forgeweaver/Sounds/start_03.ogg" id="10_rq3a5"]
[ext_resource type="AudioStream" uid="uid://bkb0lm78gp58m" path="res://Encounters/Forgeweaver/Sounds/collector_01.ogg" id="11_ch8go"]
[ext_resource type="AudioStream" uid="uid://d3yakblb5gbug" path="res://Encounters/Forgeweaver/Sounds/collector_02.ogg" id="12_84ikf"]
[ext_resource type="AudioStream" uid="uid://c0qmqr7w3oprd" path="res://Encounters/Forgeweaver/Sounds/collector_03.ogg" id="13_gap7l"]
[ext_resource type="AudioStream" uid="uid://c1ipgo6k5p0u6" path="res://Encounters/Forgeweaver/Sounds/vt_01.ogg" id="14_2m7o8"]
[ext_resource type="AudioStream" uid="uid://cf8hh7o7qffwx" path="res://Encounters/Forgeweaver/Sounds/vt_02.ogg" id="15_8epvg"]
[ext_resource type="AudioStream" uid="uid://4gj5tmv406yu" path="res://Encounters/Forgeweaver/Sounds/vt_03.ogg" id="16_5fbur"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_s65yh"]
streams_count = 3
stream_0/stream = ExtResource("8_byhln")
stream_1/stream = ExtResource("9_41chg")
stream_2/stream = ExtResource("10_rq3a5")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_equjc"]
streams_count = 3
stream_0/stream = ExtResource("11_ch8go")
stream_1/stream = ExtResource("12_84ikf")
stream_2/stream = ExtResource("13_gap7l")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m5neo"]
streams_count = 3
stream_0/stream = ExtResource("14_2m7o8")
stream_1/stream = ExtResource("15_8epvg")
stream_2/stream = ExtResource("16_5fbur")

[node name="Encounter" type="Node2D"]
script = ExtResource("1_77d7t")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575, 324)
scale = Vector2(0.576395, 0.576395)
texture = ExtResource("1_yxmbn")
metadata/_edit_lock_ = true

[node name="Pylons" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="West Pylon" parent="Pylons" node_paths=PackedStringArray("void_tear_spawn") groups=["pylons"] instance=ExtResource("2_csgoa")]
position = Vector2(306, 205)
void_tear_spawn = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Pylons/West Pylon"]
position = Vector2(490, 160)
rotation = -2.96789

[node name="South Pylon" parent="Pylons" node_paths=PackedStringArray("void_tear_spawn") groups=["pylons"] instance=ExtResource("2_csgoa")]
position = Vector2(576, 522)
void_tear_spawn = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Pylons/South Pylon"]
position = Vector2(0, -303)
rotation = 1.5708

[node name="East Pylon" parent="Pylons" node_paths=PackedStringArray("void_tear_spawn") groups=["pylons"] instance=ExtResource("2_csgoa")]
position = Vector2(845, 205)
void_tear_spawn = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Pylons/East Pylon"]
position = Vector2(-490, 160)
rotation = -0.332288

[node name="Forgeweaver" parent="." instance=ExtResource("3_6ujcr")]
unique_name_in_owner = true
position = Vector2(577, 342)

[node name="Player" parent="." instance=ExtResource("5_4be0d")]
position = Vector2(397, 455)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="RaidAlert" parent="UI" instance=ExtResource("6_0biid")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 552.0
offset_top = -20.0
offset_right = 552.0
offset_bottom = -20.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="PlayerLives" parent="UI" instance=ExtResource("7_84ikf")]
layout_mode = 1

[node name="ReadyCheck" parent="UI" instance=ExtResource("8_gap7l")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 557.0
offset_top = 322.0
offset_right = 557.0
offset_bottom = 322.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_pjhgh")
volume_db = -10.0

[node name="VoiceStart" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_s65yh")
volume_db = -10.0

[node name="InvokeCollectorPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_equjc")
volume_db = -10.0

[node name="VoidTearPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_m5neo")
volume_db = -10.0
